Bug 1994963 - [devtools] Make devtools standalone button nicer in dark mode. r=devtools-reviewers,jdescottes.
Set a proper border and tweak the --toolbarbutton-hover-(background|color) variables so we do get different
colors on hover with accessible contrast.

Depends on D269005

Differential Revision: https://phabricator.services.mozilla.com/D269020

--- a/devtools/client/themes/common.css
+++ b/devtools/client/themes/common.css
@@ -416,8 +416,15 @@ iframe {
 .devtools-button.devtools-button-standalone {
   min-height: 28px;
   padding: 4px 6px;
-  border: 1px solid light-dark(rgba(138, 161, 180, 0.2), transparent);
+  border: 1px solid light-dark(rgba(138, 161, 180, 0.2), var(--grey-50));
   background: var(--toolbarbutton-background);
+  /* prettier-ignore */
+  color: light-dark(
+    var(--grey-70),
+    /* In dark mode, --grey-40 will only give us a AA contrast score, but --grey-30
+       is a bit too harsh, so we mix the color just enough to get a AAA score */
+    color-mix(in srgb, var(--grey-30) 70%, var(--grey-40))
+  );
 }
 
 /* Selectable button which is unchecked. */
